score, winner, IA

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Reversi</title>
     <link href="style.css" rel="stylesheet" />
     <script src="ts/index.ts" defer ></script>
     <script>
@@ -15,11 +15,6 @@
 </head>
 <body>
     <h1>Reversi MVP</h1>
-
-    R1:
-    <div class="R1"></div>
-
-    R2:
-    <div class="R2"></div>
+    <div class="game"></div>
 </body>
 </html>
